redesignedoj/files_usersubmissions/40/submission.txt
1_PROB7_code.cpp: In function ‘int main()’:
1_PROB7_code.cpp:7:11: error: expected ‘}’ at end of input
    7 |  return 0;
      |           ^
1_PROB7_code.cpp:3:11: note: to match this ‘{’
    3 | int main(){
      |           ^
